--- a/MyMvp/app/build.gradle
+++ b/MyMvp/app/build.gradle
@@ -35,4 +35,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.9.0'
     implementation 'com.squareup.okio:okio:1.7.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
+
+    compile 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
