新内容添加

--- a/MyMvp/app/build.gradle
+++ b/MyMvp/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
+    //编译的 SDK 版本，如API20
     compileSdkVersion 26
     defaultConfig {
         applicationId "com.company.project.android"
