--- a/MyMvp/app/build.gradle
+++ b/MyMvp/app/build.gradle
@@ -5,12 +5,20 @@ android {
     compileSdkVersion 26
     defaultConfig {
         applicationId "com.company.project.android"
-        minSdkVersion 15
-        targetSdkVersion 26
+        minSdkVersion 19
+        targetSdkVersion 21
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [eventBusIndex: 'com.company.project.android.MyEventBusIndex']
+            }
+        }
+
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -38,5 +46,8 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
+    implementation 'org.greenrobot:eventbus:latest.release'
+    annotationProcessor "org.greenrobot:eventbus-annotation-processor:latest.release"
     implementation project(':adslibrary')
 }
