--- a/MyMvp/app/src/main/AndroidManifest.xml
+++ b/MyMvp/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         />
-
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <!-- Needed to allow Linphone to install on tablets, since android.permission.CAMERA implies android.hardware.camera and android.hardware.camera.autofocus are required -->
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false"/>
     <application
         android:name=".ui.application.BaseApplication"
         android:allowBackup="true"
