--- a/MyMvp/app/build.gradle
+++ b/MyMvp/app/build.gradle
@@ -11,7 +11,7 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
-        javaCompileOptions {
+        javaCompileOptions {//Java编译配置参数
             annotationProcessorOptions {
                 arguments = [eventBusIndex: 'com.company.project.android.MyEventBusIndex']
             }
@@ -22,7 +22,7 @@ android {
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'//混淆文件
         }
     }
 }
