--- a/MyMvp/build.gradle
+++ b/MyMvp/build.gradle
@@ -1,8 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
-buildscript {
+buildscript {//构建脚本
     
-    repositories {
+    repositories {//仓库
         google()
         jcenter()
     }
