--- a/MyMvp/build.gradle
+++ b/MyMvp/build.gradle
@@ -38,4 +38,13 @@ ext {
     targetSdkVersion = 22
     appcompatV7 = "com.android.support:appcompat-v7:$androidSupportVersion"
     constraintLayout = 'com.android.support.constraint:constraint-layout:1.0.2'
+    // Sdk and tools
+    // Support library and architecture components support minSdk 14 and above.
+    minSdkVersion = 14
+    targetSdkVersion = 26
+    compileSdkVersion = 26
+    buildToolsVersion = '26.0.2'
+
+    // App dependencies
+    supportLibraryVersion = '26.1.0'
 }
